fix to docker-compose to fix mysql regression

--- a/modules/swarm/part2/docker-compose.yml
+++ b/modules/swarm/part2/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   mysql:
-    image: "mysql/mysql-server:latest"
+    image: "mysql/mysql-server:5.7"
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: readinglist
